Fixed bug #74873 (Minor BC break: PCRE_JIT changes output of preg_match()).